feat: replace ServiceConfig with AppConfig
