# libs/api/config/data-access/src/lib/api-config-data-access.service.ts
@@ -72,10 +72,6 @@ export class ApiConfigDataAccessService {
     return this.config.get('mogamiSubsidizerKeypair')
   }
 
-  get mogamiSubsidizerPublicKey(): PublicKey {
-    return this.mogamiSubsidizerKeypair.publicKey
-  }
-
   get port() {
     return this.config.get('port')
   }
@@ -112,14 +108,5 @@ export class ApiConfigDataAccessService {
       exec('prettier --write ./api-swagger.json', { cwd: process.cwd() })
     }
     SwaggerModule.setup(this.prefix, app, document)
-  }
-
-  getServiceConfig() {
-    return {
-      mainnet: this.mogamiMainnet,
-      mint: this.mogamiMintPublicKey,
-      subsidizer: this.mogamiSubsidizerPublicKey.toBase58(),
-      tokenProgram: TOKEN_PROGRAM_ID.toBase58(),
-    }
   }
 }
